tests/typ/image-error.typ
// error: 5:9-5:30 failed to load image
// error: 8:9-8:30 failed to load image

// File does not exist.
[image: "path/does/not/exist"]

// File exists, but is no image.
[image: "typ/image-error.typ"]
